work/noV/istio-specs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: httpsserver
spec:
  gateways:
    - httpsserver
  hosts:
    - httpsserver.cncamp.io
  http:
    - match:
      - port: 443
      - uri:
          exact: "/httpsserver/hello"
      rewrite:
        uri: "/hello"
      route:
        - destination:
            host: httpsserver.httpsserver.svc.cluster.local
            port:
              number: 80
    - match:
        - port: 443
      route:
        - destination:
            host: httpserver.httpsserver.svc.cluster.local
            port:
              number: 80
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: httpsserver
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - httpsserver.cncamp.io
      port:
        name: https-default
        number: 443
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: cncamp-credential
